Using gradle warnings, eclipse warnings, clean up a lot of code.